--- a/jour2.html
+++ b/jour2.html
@@ -87,11 +87,14 @@ Les productions de Datactivist sont librement réutilisables selon les termes de
 
 ---
 
-### Culture : trois types de données .red[concernées par l’ouverture]  
+### Culture : principales catégories de données .red[concernées par l’ouverture]  
 
-* 1 - Les données statistiques et économiques des institutions culturelles (fréquentation, recettes, subventions, etc.)
-* 2 - Les métadonnées culturelles, c’est-à dire les notices bibliographiques et plus largement les données associées aux œuvres (localisation, description, auteur, œuvres associées, prix, propriétaire) 
-* 3 - Les fichiers images et copies numériques des œuvres **entrées dans le domaine public**. 
+* Les **données statistiques** des institutions culturelles : fréquentation, entrées, équipements
+* Les **bases de données des collections** : métadonnées et plus largement les données associées aux œuvres (localisation, description, auteur, œuvres associées, prix, propriétaire) avec images ou sans image
+* Les **listes de structures** : musées, monuments, cinéma, etc.
+* Les référentiels ou nomenclatures 
+* Les données de type **agenda**, événements, programmations
+* Les **données financières** : financement, ressources, budgets annuels, subventions
 
 &gt; Important : les œuvres protégées par le droit d’auteur ou un droit voisin ne peuvent faire l’objet d’un droit de réutilisation, mais les œuvres entrées dans le domaine public relèvent pleinement de l’ouverture des données publiques.
 
@@ -342,7 +345,14 @@ Quelques principes à retenir :
 
 #### Choisir la licence de réutilisation
 
-Le contrat de licence de réutilisation permet de déterminer les droits et obligations réciproques des parties. Il est important que toutes les réutilisations, y compris celles consenties à titre gratuit, soient conditionnées à l'acceptation d'un contrat, et que l'usager en soit clairement informé. 
+Le contrat de licence de réutilisation permet de déterminer les droits et obligations réciproques des parties. Il est important que toutes les réutilisations, y compris celles consenties à titre gratuit, soient conditionnées à l'acceptation d'un contrat, et que l'usager en soit clairement informé. La loi pour une République Numérique prévoit deux licences possibles : la Licence Ouverte ou ODBL
+
+---
+
+### Zoom sur les licences ouvertes et ODBL 
+
+![image alt](https://datactivist.coop/aaf/img/licences.png)
+
 
 ---
 
@@ -358,6 +368,17 @@ Le contrat de licence de réutilisation permet de déterminer les droits et obli
 ### [WTFCSV](https://databasic.io/en/wtfcsv/) : un outil pour prévisualiser un jeu de données en .csv
 
 ![](https://datactivist.coop/occitanie/img/wtfcsv.png)
+
+---
+
+### Exercice : .red[réalisez un fichier .csv de qualité]
+
+&gt; **À vous maintenant** !
+
+* Utilisez les bonnes pratiques et apprenez à réaliser un fichier de type tableur sans erreur
+* Puis, à produire ensuite un fichier .CSV répondant aux critères de publication en open data
+
+![](./img/exercice_csv.png)
 
 ---
 class: inverse, center, middle
@@ -477,7 +498,7 @@ En savoir plus :  [Un projet issu du Hackathon de la BnF](http://gallicastudio.b
 
 &gt; * Par groupe de deux, sélectionnez un ensemble de données de data.culture.gouv et décrivez-le avec des metadonnées les plus exhaustives possibles. 
 
-&gt; * Est-ce que votre organisation dispose d'une liste de métadonnées requises pour la publication de données ouvertes ?
+&gt; * Est-ce que votre service, direction ou établissement, dispose d'une liste de métadonnées requises pour la publication de données ouvertes ?
 
 ---
 ### Exercice : les bénéfices de l'open data
@@ -529,13 +550,21 @@ class: middle
 
 ---
 
-### Encourager les réutilisations internes
+### Encourager les .red[réutilisations internes]
 
 * Sensibiliser, faire connaître et démontrer l’intérêt de l’ouverture des données auprès des décideurs et des agents.
 * Inciter les services producteurs à ouvrir les données qu’ils produisent et à utiliser les données ouvertes pour leurs propres usages.
 * Diffuser une culture de la donnée au sein de l’organisation afin d’accompagner le développement des usages et favoriser la transformation de l’action publique (pilotage, évaluation, etc.) à partir des données.
 * Favoriser les **échanges entre pairs** pour partager des retours d’expérience et des bonnes pratiques.
 * Animer et acculturer les communautés d’utilisateurs internes afin de renforcer leur capacité à (ré)utiliser les données pour leurs propres besoins.
+
+---
+
+class: inverse, center, middle
+
+### Exercice : Créer votre première datavisualisation avec les données de data.culture.gouv.fr  
+
+*À partir de l’onglet « Carte » de data.culture.gouv.fr, nous allons apprendre à créer une carte avec plusieurs jeux de données, ou à ajouter plusieurs calques et filtres.* 
 
 ---
 
@@ -603,9 +632,9 @@ Un hackathon allemand sur la thématique des données culturelles ouvertes. Fond
 
 ### Questions et .red[exercice de groupe]
 
-&gt; *  #### Y a-t-il une offre et une demande pour les données publiques ouvertes au sein de votre organisation ? Si oui, qui fournit quoi à qui ?
+&gt; *  #### Y a-t-il une offre et une demande pour les données publiques ouvertes au sein de votre service, direction ou établissement ? Si oui, qui fournit quoi à qui ?
 
-&gt; * #### D’après vous, quels sont les obstacles principaux pour la publication de données publiques ouvertes au sein de votre organisation ?
+&gt; * #### D’après vous, quels sont les obstacles principaux pour la publication de données publiques ouvertes au sein de votre service, direction ou établissement ?
 
 ---
 ### Bibliographie 
