--- a/jour1.html
+++ b/jour1.html
@@ -581,13 +581,13 @@ Trois grandes étapes caractérisent en France la **construction d’un droit de
 
 ### Frise chronologique de l'évolution du .red[cadre législatif] français
 
-<div id="htmlwidget-9e980850807de932c7b9" class="timevis html-widget" style="width:715px;height:350px;">
+<div id="htmlwidget-48a88b93a2638f0e4647" class="timevis html-widget" style="width:715px;height:350px;">
 <div class="btn-group zoom-menu">
 <button type="button" class="btn btn-default btn-lg zoom-in" title="Zoom in">+</button>
 <button type="button" class="btn btn-default btn-lg zoom-out" title="Zoom out">-</button>
 </div>
 </div>
-<script type="application/json" data-for="htmlwidget-9e980850807de932c7b9">{"x":{"items":[{"id":"1","content":"Loi CADA","start":"1978-07-17"},{"id":"2","content":"Directive PSI","start":"2003-11-17"},{"id":"3","content":"Directive INSPIRE","start":"2007-03-14"},{"id":"4","content":"Révision de la directive PSI","start":"2013-06-13"},{"id":"5","content":"Loi Notre","start":"2015-08-07"},{"id":"6","content":"Loi Valter","start":"2015-12-28"},{"id":"7","content":"Loi pour une République Numérique","start":"2016-10-07"}],"groups":null,"showZoom":true,"zoomFactor":0.5,"fit":true,"options":[],"height":"350px","api":[]},"evals":[],"jsHooks":[]}</script>
+<script type="application/json" data-for="htmlwidget-48a88b93a2638f0e4647">{"x":{"items":[{"id":"1","content":"Loi CADA","start":"1978-07-17"},{"id":"2","content":"Directive PSI","start":"2003-11-17"},{"id":"3","content":"Directive INSPIRE","start":"2007-03-14"},{"id":"4","content":"Révision de la directive PSI","start":"2013-06-13"},{"id":"5","content":"Loi Notre","start":"2015-08-07"},{"id":"6","content":"Loi Valter","start":"2015-12-28"},{"id":"7","content":"Loi pour une République Numérique","start":"2016-10-07"}],"groups":null,"showZoom":true,"zoomFactor":0.5,"fit":true,"options":[],"height":"350px","api":[]},"evals":[],"jsHooks":[]}</script>
 
 ---
 
@@ -1206,7 +1206,7 @@ En effet, les articles Wikipédia jouent un rôle important de “porte d’entr
 &gt; Avec d’autres collections nord-américaines importantes comme celles du Walters Museum (2011), ou du Los Angeles County Museum of Art (2013), le mouvement OpenGLAM bénéficie de l’engagement de plusieurs grands musées aux collections majoritairement placées dans le domaine public. ]
 
 ---
-### Les politiques Open Content : .red[Cleveland Museum of Arts (U.S)]
+### Les politiques Open Content : .red[Cleveland Museum of Arts (US)]
 
 Le 23 janvier 2019, le Cleveland Museum of Art a annoncé qu'il devenait une institution en libre accès, utilisant la désignation Creative Commons Zero (CC0) pour les images et les données haute résolution liées à sa collection. 
 
@@ -1233,7 +1233,7 @@ En outre, des parties des informations sur les collections (métadonnées) de pl
 
 * Toutes les images issues d'œuvres du domaine public de la collection du Met sont disponibles sous la licence Creative Commons Zero (CC0)
 
-* Pour faciliter la recherche de ces images sur leur site Web, il est possible de filtrer les recherches par oeuvres tombant dans le domaine public. Toutes les images en Open Access sont marquées du logo CC0 sur leur page web respective.
+* Pour faciliter la recherche de ces images sur leur site Web, il est possible de filtrer les recherches par œuvres appartenant au domaine public. Toutes les images en Open Access sont marquées du logo CC0 sur leur page web respective.
 
 .center[&lt;img src="./img/MET_download_icon.jpg" height="250"/&gt;] 
 
@@ -1331,7 +1331,7 @@ Une bonne stratégie consiste à réduire les frictions :
 
 
 #### Obtenir un soutien au plus haut niveau
-* Pour mettre en oeuvre les moyens et les ressources à déployer
+* Pour mettre en œuvre les moyens et les ressources à déployer
 
 #### Configurer l’organisation pour l’ouverture
 * Organiser la gouvernance, les circuits de validation 
