Mise à jour de la bibliographie

--- a/jour2.html
+++ b/jour2.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="" xml:lang="">
   <head>
     <title>L’ouverture des données publiques culturelles en pratique</title>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <meta name="author" content="" />
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/datactivist.css" rel="stylesheet" />
@@ -637,21 +637,26 @@ Un hackathon allemand sur la thématique des données culturelles ouvertes. Fond
 &gt; * #### D’après vous, quels sont les obstacles principaux pour la publication de données publiques ouvertes au sein de votre service, direction ou établissement ?
 
 ---
-### Bibliographie 
 
-* **Camille Domange** : Ouverture et partage des données publiques culturelles, 209 pages (2013) 
-https://www.ladocumentationfrancaise.fr/rapports-publics/144000037/index.shtml
-Editeur : Ministère de la culture et de la communication
+### Bibliographie
 
-* **Nicolas Poulain**, « Les musées départementaux de la Haute-Saône et Wikipédia : de l'institution à la contribution », La Lettre de l’OCIM [En ligne], 164 | 2016, mis en ligne le 01 mars 2017, consulté le 31 juillet 2019. URL : http://journals.openedition.org/ocim/1642 ; DOI : 10.4000/ocim.1642
+* **Guide pratique dédié à l’ouverture des données publiques culturelles**
+Publié par le ministère de la Culture, juillet 2019, URL : http://www.culture.gouv.fr/Media/Thematiques/Innovation-numerique/Folder/Guide-pratique-dedie-a-l-ouverture-des-donnees-publiques-culturelles
 
-* **Droits des images, histoire de l’art et société**, Rapport sur les régimes de diffusion des images patrimoniales et leur impact sur la recherche, l’enseignement et la mise en valeur des collections publiques.
-Programme Images/Usages, Institut national d’histoire de l’art. 
-Octobre 2018
+* **Numérisation et valorisation des contenus culturels : guide ouverture et réutilisation des informations publiques numériques du secteur culturel**
+Publié par le ministère de la Culture, 2017, URL : http://www.culture.gouv.fr/Media/Thematiques/Innovation-numerique/Folder/Livrables-GT-Numerisation/Numerisation-et-valorisation-des-contenus-culturels-guide-ouverture-et-reutilisation-des-informations-publiques-numeriques-du-secteur-culturel
 
-* **Guide de bonnes pratiques en matière de propriété littéraire et artistique**, réalisé dans le cadre du Programme national de Numérisation et de Valorisation des contenus culturels en 2017. [*Télécharger le guide*] (http://www.culture.gouv.fr/Media/Thematiques/Innovation-numerique/Folder/Livrables-GT-Numerisation/Guide-de-bonnes-pratiques-en-matiere-de-propriete-litteraire-et-artistique)
+* **Guide de bonnes pratiques en matière de propriété littéraire et artistique** Publié par le ministère de la Culture, 2017, URL : http://www.culture.gouv.fr/Media/Thematiques/Innovation-numerique/Folder/Livrables-GT-Numerisation/Guide-de-bonnes-pratiques-en-matiere-de-propriete-litteraire-et-artistique
 
-* **Guide Open Data Cnil** Source : [Site de la CNIL](https://www.cnil.fr/sites/default/files/atoms/files/guide_open_data.pdf)
+---
+### Bibliographie (suite)
+
+* Rapport « Ouverture et partage des données publiques culturelles – pour une(r)évolution numérique dans le secteur culturel », Camille Domange, publié par le ministère de la Culture et de la Communication, décembre 2013, URL : https://www.culture.gouv.fr/Espace-documentation/Rapports/Open-Data-ouverture-et-partage-des-donnees-publiques-culturelles
+
+* **Les musées départementaux de la Haute-Saône et Wikipédia** : de l’institution à la contribution, Nicolas Poulain, La Lettre de l’OCIM [En ligne],164 | 2016, mis en ligne le 01 mars 2017, URL : http://journals.openedition.org/ocim/1642
+
+* **Droits des images, histoire de l’art et société** - Rapport sur les régimes de diffusion des images patrimoniales et leur impact sur la recherche, l’enseignement et la mise en valeur des collections publiques
+Programme Images/usages, Institut national d’histoire de l’art, octobre 2018, URL : https://www.inha.fr/_attachments/rapport-final-du-programme-images-usages-article/INHA_rapport_images_usages.pdf?download=true
 
 ---
 class: inverse, center, middle
